--- a/jira-account-service/conf/application.conf
+++ b/jira-account-service/conf/application.conf
@@ -44,4 +44,5 @@ play.i18n.langs = [ "en" ]
 # play.evolutions.db.default.enabled=false
 
 
-orientdb.url = "remote:localhost/UserAccessControl"
+orientdb.url = "remote:192.168.99.101:32772/UserAccessControl"
+jira.url = "http://192.168.99.101:32768/rest/api/2"
