Store service for Consul

--- a/google-apps-service/conf/application.conf
+++ b/google-apps-service/conf/application.conf
@@ -45,3 +45,6 @@ play.i18n.langs = [ "en" ]
 #
 # Application specific configuration
 google.directory.rest.url="https://www.googleapis.com/admin/directory/v1/"
+consul.store.rest.url="https://52.26.79.230:8500/v1/kv/"
+consul.user="admin"
+conusl.password="Moonwalk1"
