Added config lookup from consul and vault

--- a/jira-account-service/conf/application.conf
+++ b/jira-account-service/conf/application.conf
@@ -14,34 +14,21 @@ play.crypto.secret = "changeme"
 # ~~~~~
 play.i18n.langs = [ "en" ]
 
-# Router
-# ~~~~~
-# Define the Router object to use for this application.
-# This router will be looked up first when the application is starting up,
-# so make sure this is the entry point.
-# Furthermore, it's assumed your route file is named properly.
-# So for an application router like `my.application.Router`,
-# you may need to define a router file `conf/my.application.routes`.
-# Default to Routes in the root package (and conf/routes)
-# play.http.router = my.application.Routes
+consul.url = "http://52.34.150.104:8500"
 
-# Database configuration
-# ~~~~~
-# You can declare as many datasources as you want.
-# By convention, the default datasource is named `default`
-#
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.username=sa
-# db.default.password=""
+# Following configuration can be replaced with values from consul
+vault/url = "http://192.168.99.100:32771"
+vault/user = "service-account"
+vault/pass = "supersecret"
+jiraservice/orientdb/url = "remote:192.168.99.100:32782/UserAccessControl"
+jiraservice/jira/url = "http://192.168.99.100:32780/rest/api/2"
 
-# Evolutions
-# ~~~~~
-# You can disable evolutions if needed
-# play.evolutions.enabled=false
 
-# You can disable evolutions for a specific datasource if necessary
-# play.evolutions.db.default.enabled=false
-
-orientdb.url = "remote:192.168.99.100:32782/UserAccessControl"
-jira.url = "http://192.168.99.100:32780/rest/api/2"
+play.ws.ssl.loose.acceptAnyCertificate=true
+play.ws.ssl {
+  trustManager = {
+    stores = [
+      { type = "PEM", path = "conf/mantl.crt" }
+    ]
+  }
+}
