--- a/client-side/bower.json
+++ b/client-side/bower.json
@@ -13,8 +13,7 @@
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.4.2",
-    "angular-drag-and-drop-lists": "~1.3.0"
+    "angular": "~1.4.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
