--- a/ad-account-service/.gitignore
+++ b/ad-account-service/.gitignore
@@ -1,3 +1,12 @@
-/.idea
-*.iml
+logs
 target
+/.idea
+/.idea_modules
+/.classpath
+/.project
+/.settings
+/RUNNING_PID
+*.iml
+*.log
+/project/project
+/project/target
