[AD] added akka Actors
-added Actors
-added tests
-refactored rest endpoints and data format

--- a/ad-account-service/conf/application.conf
+++ b/ad-account-service/conf/application.conf
@@ -8,7 +8,7 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-play.crypto.secret = "changeme"
+play.crypto.secret = "adrest"
 
 # The application languages
 # ~~~~~
@@ -41,11 +41,11 @@ play.i18n.langs = [ "en" ]
 # play.evolutions.enabled=false
 
 
-play.modules.enabled += "play.AdGuiceModule"
+play.modules.enabled += "helpers.guice.AdGuiceModule"
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
-host=52.33.224.213
+host=52.35.171.190
 port=636
 bind.dn="CN=Ad Joiner,CN=Users,DC=mantlio,DC=local"
 bind.password="'s8DZ/t\"pngGW{]6"
