added config from consul on user service added cors filter on jira service

--- a/user-service/conf/application.conf
+++ b/user-service/conf/application.conf
@@ -14,6 +14,17 @@ play.crypto.secret = "changeme"
 # ~~~~~
 play.i18n.langs = [ "en" ]
 
+consul.url = "http://52.11.174.28:8500"
+
+play.ws.ssl.loose.acceptAnyCertificate=true
+play.ws.ssl {
+  trustManager = {
+    stores = [
+      { type = "PEM", path = "conf/mantl.crt" }
+    ]
+  }
+}
+
 play.filters.cors {
     # The path prefixes to filter.
     pathPrefixes = ["/"]
