--- a/ad-account-service/conf/application.conf
+++ b/ad-account-service/conf/application.conf
@@ -14,37 +14,10 @@ play.crypto.secret = "adrest"
 # ~~~~~
 play.i18n.langs = [ "en" ]
 
-# Router
-# ~~~~~
-# Define the Router object to use for this application.
-# This router will be looked up first when the application is starting up,
-# so make sure this is the entry point.
-# Furthermore, it's assumed your route file is named properly.
-# So for an application router like `my.application.Router`,
-# you may need to define a router file `conf/my.application.routes`.
-# Default to Routes in the root package (and conf/routes)
-# play.http.router = my.application.Routes
-
-# Database configuration
-# ~~~~~
-# You can declare as many datasources as you want.
-# By convention, the default datasource is named `default`
-#
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.username=sa
-# db.default.password=""
-
-# Evolutions
-# ~~~~~
-# You can disable evolutions if needed
-# play.evolutions.enabled=false
 
 
 play.modules.enabled += "helpers.guice.AdGuiceModule"
 
-# You can disable evolutions for a specific datasource if necessary
-# play.evolutions.db.default.enabled=false
 host=52.35.171.190
 port=636
 bind.dn="CN=Ad Joiner,CN=Users,DC=mantlio,DC=local"
@@ -52,3 +25,28 @@ bind.password="'s8DZ/t\"pngGW{]6"
 pool.size=5
 cn.users="CN=Users,DC=mantlio,DC=local"
 default.password=Password1
+
+orientdb.url="remote:52.25.246.25:2424/UserAccessControl"
+
+play.filters.cors {
+    # The path prefixes to filter.
+    pathPrefixes = ["/"]
+
+    # The allowed origins. If null, all origins are allowed.
+    allowedOrigins = null
+
+    # The allowed HTTP methods. If null, all methods are allowed
+    allowedHttpMethods = null
+
+    # The allowed HTTP headers. If null, all headers are allowed.
+    allowedHttpHeaders = null
+
+    # The exposed headers
+    exposedHeaders = []
+
+    # Whether to support credentials
+    supportsCredentials = true
+
+    # The maximum amount of time the CORS meta data should be cached by the client
+    preflightMaxAge = 1 hour
+}
