[AD] move configuration to Consul
-added configuration reader from consul
-added sertificate and configured unsecured SSL connection for WS

--- a/ad-account-service/conf/application.conf
+++ b/ad-account-service/conf/application.conf
@@ -14,20 +14,19 @@ play.crypto.secret = "adrest"
 # ~~~~~
 play.i18n.langs = [ "en" ]
 
-
-
 play.modules.enabled += "helpers.guice.AdGuiceModule"
 
-host=52.35.171.190
-port=636
-bind.dn="CN=Ad Joiner,CN=Users,DC=mantlio,DC=local"
-bind.password="'s8DZ/t\"pngGW{]6"
-pool.size=5
-cn.users="CN=Users,DC=mantlio,DC=local"
-default.password=Password1
+consul.url = "http://52.34.21.216:8500/v1/kv/adservice?recurse"
 
-orientdb.url="remote:52.25.246.25:2424/UserAccessControl"
-
+#FOR DEV ENV ONLY
+play.ws.ssl.loose.acceptAnyCertificate=true
+play.ws.ssl {
+    trustManager = {
+        stores = [
+            { type = "PEM", path = "conf/mantl.crt" }
+        ]
+    }
+}
 play.filters.cors {
     # The path prefixes to filter.
     pathPrefixes = ["/"]
