[Client] AD account GET POST DELETE initial implementation

--- a/client-side/env-config.json
+++ b/client-side/env-config.json
@@ -3,6 +3,7 @@
     "ENV": {
       "usersApi": "http://52.89.131.202:25077/",
       "jiraApi": "http://52.89.131.202:9951/",
+      "adApi": "http://52.89.131.202:9951/",
       "debugEnabled": true
     }
   },
@@ -10,6 +11,7 @@
     "ENV": {
       "usersApi": "http://52.89.131.202:25077/",
       "jiraApi": "http://52.89.131.202:9951/",
+      "adApi": "http://52.89.131.202:9951/",
       "debugEnabled": true
     }
   },
@@ -17,6 +19,7 @@
     "ENV": {
       "usersApi": "http://52.89.131.202:25077/",
       "jiraApi": "http://52.89.131.202:9951/",
+      "adApi": "http://52.89.131.202:9951/",
       "debugEnabled": false
     }
   }
