updated routes to separate services path

--- a/client-side/env-config.json
+++ b/client-side/env-config.json
@@ -18,8 +18,8 @@
   "dist": {
     "ENV": {
       "usersApi": "http://52.35.140.210/",
-      "jiraApi": "http://52.35.140.210/",
-      "adApi": "http://52.35.140.210/",
+      "jiraApi": "http://52.35.140.210/jira/",
+      "adApi": "http://52.35.140.210/ad/",
       "debugEnabled": false
     }
   }
