--- a/jira-account-service/conf/application.conf
+++ b/jira-account-service/conf/application.conf
@@ -8,7 +8,7 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-play.crypto.secret = "changeme"
+play.crypto.secret = "4v3xrwjKzrbaobpQGJNDeMh74vJFl312DyOL4o5AA2ioxZJg2BkL_F8V"
 
 # The application languages
 # ~~~~~
