repository part & REST api

--- a/google-apps-service/conf/application.conf
+++ b/google-apps-service/conf/application.conf
@@ -48,3 +48,31 @@ google.directory.rest.url="https://www.googleapis.com/admin/directory/v1/"
 consul.store.rest.url="http://demo.consul.io/v1/kv/"
 consul.user="admin"
 conusl.password="Moonwalk1"
+
+
+akka.actor.deployment {
+/users {
+	router = balancing-pool
+	nr-of-instances = 10
+	}
+
+/users-repository {
+	router = balancing-pool
+	nr-of-instances = 10
+	}
+
+/groups{
+	router = balancing-pool
+	nr-of-instances = 10
+	}
+
+/groups-repository {
+	router = balancing-pool
+	nr-of-instances = 10
+	}
+/audit {
+	router = balancing-pool
+	nr-of-instances = 10
+	}
+
+}
