google service vault integration

--- a/jira-account-service/conf/application.conf
+++ b/jira-account-service/conf/application.conf
@@ -20,7 +20,7 @@ play.ws.ssl.loose.acceptAnyCertificate=true
 play.ws.ssl {
   trustManager = {
     stores = [
-      { type = "PEM", path = "conf/mantl.crt" }
+      { type = "PEM", path = "conf/mantl.crt" },{ type = "PEM", path = "conf/vault.crt" }
     ]
   }
 }
