--- a/google-apps-service/conf/application.conf
+++ b/google-apps-service/conf/application.conf
@@ -8,7 +8,7 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-play.crypto.secret = "changeme"
+play.crypto.secret = "4v3xrwjKzrbaobpQGJNDeMh74vJFl312DyOL4o5AA2ioxZJg2BkL_F8V"
 
 # The application languages
 # ~~~~~
@@ -45,6 +45,64 @@ play.i18n.langs = [ "en" ]
 #
 # Application specific configuration
 google.directory.rest.url="https://www.googleapis.com/admin/directory/v1/"
-consul.store.rest.url="http://demo.consul.io/v1/kv/"
-consul.user="admin"
-conusl.password="Moonwalk1"
+consul.store.rest.url="https://52.34.21.216:8500/v1/kv/"
+
+play.ws.ssl.loose.acceptAnyCertificate=true
+play.ws.ssl {
+  trustManager = {
+    stores = [
+      { type = "PEM", path = "conf/mantl.crt" },{ type = "PEM", path = "conf/vault.crt" }
+    ]
+  }
+}
+
+play.filters.cors {
+    # The path prefixes to filter.
+    pathPrefixes = ["/"]
+
+    # The allowed origins. If null, all origins are allowed.
+    allowedOrigins = null
+
+    # The allowed HTTP methods. If null, all methods are allowed
+    allowedHttpMethods = null
+
+    # The allowed HTTP headers. If null, all headers are allowed.
+    allowedHttpHeaders = null
+
+    # The exposed headers
+    exposedHeaders = []
+
+    # Whether to support credentials
+    supportsCredentials = true
+
+    # The maximum amount of time the CORS meta data should be cached by the client
+    preflightMaxAge = 1 hour
+}
+
+
+akka.actor.deployment {
+/users {
+	router = balancing-pool
+	nr-of-instances = 10
+	}
+
+/users-repository {
+	router = balancing-pool
+	nr-of-instances = 10
+	}
+
+/groups{
+	router = balancing-pool
+	nr-of-instances = 10
+	}
+
+/groups-repository {
+	router = balancing-pool
+	nr-of-instances = 10
+	}
+/audit {
+	router = balancing-pool
+	nr-of-instances = 10
+	}
+
+}
