refactored jira service to extract actors injection from application controller

--- a/jira-account-service/conf/application.conf
+++ b/jira-account-service/conf/application.conf
@@ -14,7 +14,14 @@ play.crypto.secret = "4v3xrwjKzrbaobpQGJNDeMh74vJFl312DyOL4o5AA2ioxZJg2BkL_F8V"
 # ~~~~~
 play.i18n.langs = [ "en" ]
 
-consul.url = "http://52.34.21.216:8500"
+play.modules.enabled += "controllers.JiraGuiceModule"
+
+consul.url = "http://demo.consul.io"
+
+# Next jiraservice configurations can be replaced with values form Consul k/v store  
+jiraservice/vault/url = "http://localhost:8200"
+jiraservice/jira/url = "http://192.168.99.100:32771"
+jiraservice/orientdb/url = "remote:localhost:2424/UserAccessControl"
 
 play.ws.ssl.loose.acceptAnyCertificate=true
 play.ws.ssl {
